--- a/tp3KevinTicona/TP3.cbp
+++ b/tp3KevinTicona/TP3.cbp
@@ -14,9 +14,6 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
-				<Linker>
-					<Add library="./LinkedList.a" />
-				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/PruebaStatic" prefix_auto="1" extension_auto="1" />
@@ -28,7 +25,6 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="./LinkedList.a" />
 				</Linker>
 			</Target>
 		</Build>
@@ -43,6 +39,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="Employee.h" />
+		<Unit filename="LinkedList.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="LinkedList.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
@@ -52,9 +51,6 @@
 		</Unit>
 		<Unit filename="parser.h" />
 		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
 			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
